# movie-collection-manager

./: CMakeLists.txt
project/main/cpp/ctrl/: Administrator.h  Controller.h  ControllerException.h  UndoRedoController.h
project/main/cpp/domain/entity/: Movie.cpp  Movie.h
project/main/cpp/domain/validator/: MovieValidator.h  Validator.h  ValidatorException.h
project/main/cpp/main/: MainException.h  main.cpp
project/main/cpp/repo/: DynamicVector.h  Repository.h  RepositoryException.h  StlVector.h
project/main/cpp/ui/: Console.cpp  Console.h  MainWindow.h  UserInterface.h  UserInterfaceException.h
project/main/resources/: admin.csv  admin.html  database.txt  user.csv  user.html
project/test/cpp/ctrl/: TestAdministrator.cpp  TestAdministrator.h  TestController.cpp  TestController.h
project/test/cpp/domain/entity/: TestMovie.cpp  TestMovie.h
project/test/cpp/domain/integer/: Integer.cpp  Integer.h  IntegerValidator.h  TestInteger.cpp  TestInteger.h
project/test/cpp/domain/validator/: TestMovieValidator.cpp  TestMovieValidator.h
project/test/cpp/repo/: TestDynamicVector.cpp  TestDynamicVector.h  TestRepository.cpp  TestRepository.h  TestStlVector.cpp  TestStlVector.h
